@@ -56,6 +56,9 @@ CMF 1.5.0beta (2004/08/06)
       
   Bug Fixes
 
+    - CMFDefault.DiscussionItem: Replies were not sorted chronologically
+      (http://www.zope.org/Collectors/CMF/211)
+
     - CMFDefault.Image: When pasting an Image object the review state did not
       revert to "private" (http://www.zope.org/Collectors/CMF/176)
 
